pom xmls refactored